--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=3005
-MONGODB_URL=mongodb+srv://ogooluwanick:Radex2001@market0.aln0x.mongodb.net/Market?retryWrites=true&w=majority
+MONGODB_URL=mongodb+srv://ogooluwanick:<password>@dev.e0hxo7j.mongodb.net/
 NODE_ENV=development
 JWT_SECRET= atafricatemp
